--- a/ShoppingCartWeb/Views/CountryMaster/IndexCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/IndexCountryMaster.cshtml
@@ -3,31 +3,30 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <br />
 <div class="row pb-2">
     <div class="col">
         <h1 class="text-dark">Countries</h1>
     </div>
+
     <div class="col-2 text-start pt-1 justify-content-start">
         <a asp-controller="CountryMaster" asp-action="CreateCountryMaster" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
-                <span class="d-inline-block align-middle me-1" style="font-size: 24px;">Create</span>
-                <!-- Increase the font-size value as needed -->
-                <i class="bi bi-plus-square-fill ml-2" style="font-size: 21px;"></i>
-                <!-- Increase the font-size value as needed -->
+
+                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
+
             </div>
         </a>
     </div>
 </div>
 
 <div class="container p-4 border mt-4">
+
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>
-                        Country Id
-                    </th>
                     <th>
                         Country Name
                     </th>
@@ -36,24 +35,44 @@
                 </tr>
             </thead>
             <tbody>
+
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td style="white-space: nowrap;">@item.CountryId</td>
-                        <td>@item.CountryName</td>
+                        <td style="white-space: nowrap;">@item.CountryName</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a asp-controller="CountryMaster" asp-action="UpdateCountryMaster" asp-route-countryId="@item.CountryId" class="btn btn-success">
-                                    <i class="bi bi-pencil-square"></i><br />
-                                </a>
-
-                                <a asp-controller="CountryMaster" asp-action="RemoveCountryMaster" asp-route-countryId="@item.CountryId" class="btn btn-danger ml-2"><i class="bi bi-trash-fill"></i></a>
+                                <a asp-controller="CountryMaster" asp-action="UpdateCountryMaster" asp-route-countryId="@item.CountryId" class="btn btn-success"><i class="bi bi-pencil-square"></i>  </a>
+                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.CountryId"><i class="bi bi-trash-fill"></i>  </a>
                             </div>
                         </td>
                     </tr>
+                    <!-- Delete Confirmation Modal for each item -->
+                    <div class="modal fade" id="deleteModal_@item.CountryId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this item?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <a asp-controller="CountryMaster" asp-action="RemoveCountryMaster" asp-route-countryId="@item.CountryId" class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 }
             </tbody>
         </table>
 
     </div>
 </div>
+@section Scripts {
+
+}
