--- a/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/UpdateCountryMaster.cshtml
@@ -17,20 +17,21 @@
                     <div class="col-2">
                         <label asp-for="CountryName" class="control-label pt-2" style="font-size:20px;"> Country</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-md-7 pb-4">
                         <input asp-for="CountryName" class="form-control" />
                         <span asp-validation-for="CountryName" class="text-danger"></span>
                     </div>
 
 
-                    <div class="col-5 offset-2">
+                    <div class="col-3 offset-3">
                         <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control ">Cancel</a>
                     </div>
-                    <div class="col-5">
-                        <input type="submit" value="Save" class="btn btn-success form-control" />
+                    <div class="col-3">
+                        <input type="submit" value="Update" class="btn btn-success form-control" />
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 </form>
 
