--- a/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/ShoppingCartWeb/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -11,10 +11,9 @@
     <div class="col-2 text-start pt-1 justify-content-start">
         <a asp-controller="RoleMaster" asp-action="CreateRoleMaster" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
-                <span class="d-inline-block align-middle me-1" style="font-size: 24px;">Create </span>
-                <!-- Increase the font-size value as needed -->
-                <i class="bi bi-plus-square-fill ml-2" style="font-size: 21px;"></i>
-                <!-- Increase the font-size value as needed -->
+
+                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
+
             </div>
         </a>
     </div>
@@ -28,9 +27,6 @@
             <thead>
                 <tr>
                     <th>
-                        Role Id
-                    </th>
-                    <th>
                         Role Name
                     </th>
 
@@ -41,15 +37,34 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>@item.RoleId</td>
                         <td>@item.RoleName</td>
                         <td style="white-space: nowrap;">
                             <div class="btn-group" role="group">
                                 <a asp-controller="RoleMaster" asp-action="UpdateRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-success"><i class="bi bi-pencil-square"></i>  </a>
-                                <a asp-controller="RoleMaster" asp-action="RemoveRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-danger ml-2"><i class="bi bi-trash-fill"></i>  </a>
+                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.RoleId"><i class="bi bi-trash-fill"></i>  </a>
                             </div>
                         </td>
                     </tr>
+                    <!-- Delete Confirmation Modal for each item -->
+                    <div class="modal fade" id="deleteModal_@item.RoleId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this item?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <a asp-controller="RoleMaster" asp-action="RemoveRoleMaster" asp-route-roleId="@item.RoleId" class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 }
             </tbody>
         </table>
