--- a/ShoppingCartWeb/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_Layout.cshtml
@@ -1,24 +1,32 @@
-﻿<!DOCTYPE html>
+﻿@using ShoppingCartWeb.Utililty;
+<!DOCTYPE html>
+
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpAcc
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @*<title>AdminLTE 3 | Blank Page</title>*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+    <!-- this is for delete popup -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+
+
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
+    @*<link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">*@
     <!-- Theme style -->
     <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
@@ -29,27 +37,33 @@
 }
 
 <body class="hold-transition sidebar-mini">
+
+    <partial name="_Notification" />
+
     <!-- Site wrapper -->
     <div class="wrapper">
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-dark navbar-light">
             <!-- Left navbar links -->
+
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                <li class="nav-item">
-                    <a class="nav-link text-white" asp-controller="User" asp-action="Login">Logout</a>
-                </li>
-                    @*<a href="#" class="nav-link">Logout</a>*@
-                </li>
+                    @if (httpAcc.HttpContext.Session.GetString(SD.SessionToken) != null &&
+                    httpAcc.HttpContext.Session.GetString(SD.SessionToken).ToString().Length > 0)
+                    {
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-controller="User" asp-action="Login">Logout</a>
+                    </li>
+                    }
             </ul>
 
         </nav>
         <!-- /.navbar -->
         <!-- Main Sidebar Container -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <aside class="main-sidebar sidebar-dark-primary elevation-4" style="position:fixed">
             <!-- Brand Logo -->
             <a href="@Url.Action("Index", "Home")" class="brand-link">
                 @*<img src="../../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">*@
@@ -66,7 +80,7 @@
                              with font-awesome or any other icon font library -->
 
                         <li class="nav-item @(currentController == "Registration" && (currentAction == "IndexRegistration" || currentAction == "IndexUser") ? "menu-open" : "")">
-                            <a href="#" class="nav-link @(currentController == "Registration" && (currentAction == "IndexRegistration" || currentAction == "IndexUser") ? "active" : "")">
+                            <a href="#" class="nav-link @(currentController == "Registration" && (currentAction == "IndexRegistration" || currentAction == "IndexUser" || currentAction == "CreateRegistration") ? "active" : "")">
                                 <i class="nav-icon fas fa-tree"></i>
                                 <p>
                                     Registrations
@@ -76,7 +90,7 @@
                             <ul class="nav nav-treeview">
 
                                 <li class="nav-item">
-                                    <a class="nav-link @(currentController == "Registration" && currentAction == "IndexRegistration" ? "active" : "")" asp-controller="Registration" asp-action="IndexRegistration">General Registration</a>
+                                    <a class="nav-link @(currentController == "Registration" && (currentAction == "IndexRegistration" || currentAction=="CreateRegistration") ? "active" : "")" asp-controller="Registration" asp-action="IndexRegistration">General Registration</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link @(currentController == "User" && currentAction == "IndexUser" ? "active" : "")" asp-controller="User" asp-action="IndexUser">User Registration</a>
@@ -114,6 +128,7 @@
 
                             </ul>
                         </li>
+
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -123,22 +138,6 @@
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
-            @*<!-- Content Header (Page header) -->
-            <section class="content-header">
-            <div class="container-fluid">
-            <div class="row mb-2">
-            <div class="col-sm-6">
-            <h1>Blank Page</h1>
-            </div>
-            <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">Blank Page</li>
-            </ol>
-            </div>
-            </div>
-            </div><!-- /.container-fluid -->
-            </section>*@
 
             <!-- Main content -->
             <section class="content">
@@ -161,29 +160,14 @@
         <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
-    <!-- jQuery -->
+    <!-- jQuery -->@*
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>*@
     <!-- AdminLTE App -->
     <script src="../../dist/js/adminlte.min.js"></script>
     <script>
-        $(document).ready(function () {
-            $(".autocomplete").autocomplete({
-                source: function (request, response) {
-                    $.ajax({
-                        url: '@Url.Action("GetAutocompleteOptions", "User")',
-                        data: { input: request.term },
-                        dataType: "json",
-                        type: "GET",
-                        success: function (data) {
-                            response(data);
-                        }
-                    });
-                },
-                minLength: 1 // Minimum characters to trigger autocomplete
-            });
-        });
+
         $(document).ready(function () {
             // Get the current page's URL
             var currentPageUrl = window.location.href;
@@ -200,16 +184,20 @@
 
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
 
+    @*
     <script src="~/AdminLTE/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <script src="~/AdminLTE/dist/js/adminlte.js"></script>
     <script src="~/AdminLTE/dist/js/pages/dashboard.js"></script>
-    <script src="~/AdminLTE/dist/js/demo.js"></script>
+    <script src="~/AdminLTE/dist/js/demo.js"></script>*@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+
+    @*for sweet alert*@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
