--- a/ShoppingCartWeb/Views/StateMaster/UpdateStateMaster.cshtml
+++ b/ShoppingCartWeb/Views/StateMaster/UpdateStateMaster.cshtml
@@ -14,17 +14,17 @@
             <div class="col-md-6">
                 <div class="row pb-3">
                     <div class="col-2">
-                        <label asp-for="State.StateName" class="control-label pt-2" style="font-size:16px;">State</label>
+                        <label asp-for="State.StateName" class="control-label pt-2" style="font-size:20px;">State</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-9 pb-3">
                         <input asp-for="State.StateName" class="form-control" />
                         <span asp-validation-for="State.StateName" class="text-danger"></span>
                     </div>
 
                     <div class="col-2">
-                        <label asp-for="State.CountryId" class="control-label pt-2" style="font-size:16px;">Country</label>
+                        <label asp-for="State.CountryId" class="control-label pt-2" style="font-size:20px;">Country</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-9 pb-3">
                         <select asp-for="State.CountryId" class="form-control" asp-items="@Model.CountryList">
                             <option disabled selected>--Select Country--</option>
                         </select>
@@ -32,15 +32,16 @@
                     </div>
 
 
-                    <div class="col-5 offset-2">
+                    <div class="col-3 offset-3">
                         <a asp-action="IndexStateMaster" asp-controller="StateMaster" class="btn-primary btn form-control ">Cancel</a>
                     </div>
-                    <div class="col-5">
-                        <input type="submit" value="Save" class="btn btn-success form-control" />
+                    <div class="col-3">
+                        <input type="submit" value="Update" class="btn btn-success form-control" />
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </form>
 
 @section Scripts
