--- a/ShoppingCartWeb/Views/User/IndexUser.cshtml
+++ b/ShoppingCartWeb/Views/User/IndexUser.cshtml
@@ -11,10 +11,9 @@
     <div class="col-2 text-start pt-1 justify-content-start">
         <a asp-controller="User" asp-action="Register" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
-                <span class="d-inline-block align-middle me-1" style="font-size: 24px;">Create</span>
-                <!-- Increase the font-size value as needed -->
-                <i class="bi bi-plus-square-fill ml-2" style="font-size: 21px;"></i>
-                <!-- Increase the font-size value as needed -->
+
+                <span class="d-inline-block align-middle" style="font-size: 24px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
+
             </div>
         </a>
     </div>
@@ -27,19 +26,13 @@
             <thead>
                 <tr>
                     <th>
-                        User Id
+                        Name
                     </th>
                     <th>
                         User Name
                     </th>
                     <th>
                         Password
-                    </th>
-                    <th>
-                        First Name
-                    </th>
-                    <th>
-                        Last Name
                     </th>
                     <th>
                         Role
@@ -51,19 +44,37 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>@item.UserId</td>
+                        <td>@item.Registration.FirstName @item.Registration.LastName</td>
                         <td>@item.UserName</td>
                         <td>*********</td>
-                        <td>@item.Registration.FirstName</td>
-                        <td>@item.Registration.LastName</td>
                         <td style="white-space: nowrap;">@item.RoleMaster.RoleName</td>
                         <td>
                             <div class="btn-group" role="group">
                                 <a asp-controller="User" asp-action="UpdateUser" asp-route-userId="@item.UserId" class="btn btn-success"><i class="bi bi-pencil-square"></i></a>
-                                <a asp-controller="User" asp-action="RemoveUser" asp-route-userId="@item.UserId" class="btn btn-danger ml-2"><i class="bi bi-trash-fill"></i></a>
+                                <a href="#" class="btn btn-danger ml-2" data-toggle="modal" data-target="#deleteModal_@item.UserId"><i class="bi bi-trash-fill"></i>  </a>
                             </div>
                         </td>
                     </tr>
+                    <!-- Delete Confirmation Modal for each item -->
+                    <div class="modal fade" id="deleteModal_@item.UserId" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this item?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <a asp-controller="User" asp-action="RemoveUser" asp-route-userId="@item.UserId" class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 }
             </tbody>
         </table>
