--- a/ShoppingCartWeb/Views/User/UpdateUser.cshtml
+++ b/ShoppingCartWeb/Views/User/UpdateUser.cshtml
@@ -12,52 +12,63 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="row pb-3">
-                    <div class="col-2">
+                    <div class="col-md-3">
                         <label asp-for="User.UserName" class="control-label pt-2" style="font-size:20px;">User Name</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-md-9 pb-4">
                         <input asp-for="User.UserName" class="form-control" />
                         <span asp-validation-for="User.UserName" class="text-danger"></span>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-md-3">
                         <label asp-for="User.Password" class="control-label pt-2" style="font-size:20px;">Password</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-md-9 pb-4">
                         <input asp-for="User.Password" placeholder="@Model.User.Password" class="form-control" />
                         <span asp-validation-for="User.Password" class="text-danger"></span>
                     </div>
 
 
-                    <div class="col-2">
+                    <div class="col-md-3">
                         <label asp-for="User.RegistrationId" class="control-label pt-2" style="font-size:20px;">Registration Name</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-md-9 pb-4">
                         <select asp-for="User.RegistrationId" class="form-control" asp-items="@Model.registrationList">
                             <option disabled selected>--Select Registration--</option>
                         </select>
                         <span asp-validation-for="User.RegistrationId" class="text-danger"></span>
                     </div>
 
-                    <div class="col-2">
+
+                    <div class="col-md-3">
                         <label asp-for="User.RoleId" class="control-label pt-2" style="font-size:20px;">Role</label>
                     </div>
-                    <div class="col-10 pb-3">
+                    <div class="col-md-9 pb-4">
                         <select asp-for="User.RoleId" class="form-control" asp-items="@Model.roleList">
                             <option disabled selected>--Select Role--</option>
                         </select>
                         <span asp-validation-for="User.RoleId" class="text-danger"></span>
                     </div>
 
-                    <div class="col-5 offset-2">
-                        <a asp-action="IndexUser" asp-controller="User" class="btn-primary btn form-control ">Cancel</a>
-                    </div>
-                    <div class="col-5">
-                        <input type="submit" value="Save" class="btn btn-success form-control" />
+                </div>
+                <div class="row">
+
+                    <div class="col-md-5"></div>
+                    <div class="col-md-6">
+
+                        <div class="row">
+                            <div class="col-4">
+                                <a asp-action="IndexUser" asp-controller="User" class="btn-primary btn form-control ">Cancel</a>
+                            </div>
+                            <div class="col-4">
+                                <input type="submit" value="Update" class="btn btn-success form-control" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </form>
 
 @section Scripts
